--- a/tsx/src/styles/globals.css
+++ b/tsx/src/styles/globals.css
@@ -24,7 +24,7 @@
   }
  */
 
- :root {
+:root {
   --background: 0 0% 100%;
   --foreground: 222.2 84% 4.9%;
 
@@ -92,4 +92,34 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* ********* */
+.codingame {
+  /* background-color: #0f172a; */
+  color: white;
+
+  /* Masquer le curseur par défaut */
+  cursor: none;
+}
+
+/* Afficher le curseur pointer pour les éléments interactifs */
+a,
+button,
+[role="button"],
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.magnifier {
+  position: fixed;
+  pointer-events: none;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  width: 100px;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-size: 200%;
+  z-index: 9999;
+  transform: translate(-50%, -50%);
 }
