--- a/tsx/src/styles/globals.css
+++ b/tsx/src/styles/globals.css
@@ -78,6 +78,29 @@
   }
 }
 
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* ********* */
+.codingame {
+  /* background-color: #0f172a; */
+  color: white;
+
+  /* Masquer le curseur par défaut */
+  cursor: none;
+}
+
+/* Afficher le curseur pointer pour les éléments interactifs */
+.codingame a,
+.codingame button,
+[role="button"],
+.cursor-pointer {
+  cursor: pointer;
+}
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
